refactor: change group api file - docs: more swagger - refactor: do not repeat loading casbin policy now
